--- a/APP/Android/PointsLeague/app/src/main/res/layout/item_card_points.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/item_card_points.xml
@@ -21,14 +21,25 @@
                 android:scaleType="centerCrop"
                 android:src="@drawable/loading_card"/>
 
-            <RelativeLayout
+            <LinearLayout
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="20dp"
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="45dp"
-                android:background="#90bdbdbd">
-                <FrameLayout
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:background="@drawable/circle"
+                    android:padding="2dp"
+                    android:id="@+id/imageView_logo_card_points_item"
+                    android:src="@drawable/nike_logo"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp" />
+                <LinearLayout
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="20dp"
+                    android:orientation="vertical"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="20dp">
+                    android:layout_height="wrap_content">
                     <TextView
                         android:id="@+id/textView_name_card_point_item"
                         android:layout_gravity="center_vertical"
@@ -37,31 +48,44 @@
                         android:text="XXX"
                         android:textSize="18sp"
                         android:textColor="@color/colorWhite"/>
-                </FrameLayout>
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginEnd="20dp">
                     <TextView
                         android:layout_gravity="center_vertical"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="积分:"
-                        android:textSize="18sp"
+                        android:text="会员卡"
+                        android:textSize="14sp"
                         android:textColor="@color/colorWhite"/>
-                    <TextView
-                        android:id="@+id/textView_points_card_point_item"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginStart="5dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="0.0"
-                        android:textSize="18sp"
-                        android:textColor="#FFDD22"/>
                 </LinearLayout>
-            </RelativeLayout>
+            </LinearLayout>
+
+            <!--<RelativeLayout-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="45dp"-->
+                <!--android:background="#90bdbdbd">-->
+                <!--<LinearLayout-->
+                    <!--android:orientation="horizontal"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--android:layout_alignParentEnd="true"-->
+                    <!--android:layout_marginEnd="20dp">-->
+                    <!--<TextView-->
+                        <!--android:layout_gravity="center_vertical"-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:text="积分:"-->
+                        <!--android:textSize="18sp"-->
+                        <!--android:textColor="@color/colorWhite"/>-->
+                    <!--<TextView-->
+                        <!--android:id="@+id/textView_points_card_point_item"-->
+                        <!--android:layout_gravity="center_vertical"-->
+                        <!--android:layout_marginStart="5dp"-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:text="0.0"-->
+                        <!--android:textSize="18sp"-->
+                        <!--android:textColor="#FFDD22"/>-->
+                <!--</LinearLayout>-->
+            <!--</RelativeLayout>-->
 
             <RelativeLayout
                 android:layout_alignParentBottom="true"
@@ -77,7 +101,7 @@
                         android:layout_gravity="center_vertical"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="可兑花旗点:"
+                        android:text="可兑通用点:"
                         android:textSize="18sp"
                         android:textColor="@color/colorWhite"/>
                     <TextView
@@ -88,7 +112,7 @@
                         android:layout_height="wrap_content"
                         android:text="0.0"
                         android:textSize="24sp"
-                        android:textColor="@color/colorOrange"/>
+                        android:textColor="#FFDD22"/>
                 </LinearLayout>
             </RelativeLayout>
 
