--- a/APP/IOS/PointExchange/PointExchange/ModifyPasswordView.xib
+++ b/APP/IOS/PointExchange/PointExchange/ModifyPasswordView.xib
@@ -27,7 +27,7 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="O5A-h0-A5C">
-                    <rect key="frame" x="63.5" y="30" width="248" height="401.5"/>
+                    <rect key="frame" x="63.5" y="39" width="248" height="401.5"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="修改密码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SsC-55-yf4">
                             <rect key="frame" x="84" y="0.0" width="80" height="90"/>
@@ -92,7 +92,7 @@
             <constraints>
                 <constraint firstItem="O5A-h0-A5C" firstAttribute="height" secondItem="SAM-dL-psd" secondAttribute="height" multiplier="0.8" id="68d-nq-mCA"/>
                 <constraint firstItem="O5A-h0-A5C" firstAttribute="centerX" secondItem="eiJ-1h-E2q" secondAttribute="centerX" id="QOr-jC-s6s"/>
-                <constraint firstItem="O5A-h0-A5C" firstAttribute="top" secondItem="eiJ-1h-E2q" secondAttribute="top" constant="30" id="bII-Wj-WFP"/>
+                <constraint firstItem="O5A-h0-A5C" firstAttribute="top" secondItem="eiJ-1h-E2q" secondAttribute="centerY" multiplier="0.15" id="tPx-vi-IyB"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
