--- a/APP/IOS/PointExchange/PointExchange/HomepageStackView.xib
+++ b/APP/IOS/PointExchange/PointExchange/HomepageStackView.xib
@@ -127,13 +127,13 @@
                     <rect key="frame" x="0.0" y="126" width="375" height="277.5"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4ox-Ia-HHM" userLabel="ScrollViewContainer">
-                            <rect key="frame" x="0.0" y="0.5" width="616" height="277.5"/>
+                            <rect key="frame" x="0.0" y="0.5" width="635.5" height="277.5"/>
                             <subviews>
                                 <view tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ulb-IB-1xZ">
-                                    <rect key="frame" x="208" y="-1" width="200" height="280"/>
+                                    <rect key="frame" x="214.5" y="-6" width="206.5" height="290"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" tag="1" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="addcard" translatesAutoresizingMaskIntoConstraints="NO" id="2Ls-qJ-kXS">
-                                            <rect key="frame" x="0.0" y="0.5" width="200" height="280"/>
+                                            <rect key="frame" x="0.0" y="0.5" width="206.5" height="290"/>
                                         </imageView>
                                     </subviews>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -141,16 +141,22 @@
                                         <constraint firstItem="2Ls-qJ-kXS" firstAttribute="leading" secondItem="Ulb-IB-1xZ" secondAttribute="leading" id="YdP-CU-P0O"/>
                                         <constraint firstAttribute="trailing" secondItem="2Ls-qJ-kXS" secondAttribute="trailing" id="d76-YN-9cL"/>
                                         <constraint firstItem="2Ls-qJ-kXS" firstAttribute="top" secondItem="Ulb-IB-1xZ" secondAttribute="top" id="iuN-Xm-eSf"/>
-                                        <constraint firstAttribute="height" priority="900" constant="280" id="obd-gk-HPk"/>
+                                        <constraint firstAttribute="height" priority="900" constant="290" id="obd-gk-HPk"/>
                                         <constraint firstAttribute="width" secondItem="Ulb-IB-1xZ" secondAttribute="height" multiplier="5:7" id="szF-gJ-Bsp"/>
                                         <constraint firstAttribute="bottom" secondItem="2Ls-qJ-kXS" secondAttribute="bottom" id="xiD-HT-yLV"/>
                                     </constraints>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                            <integer key="value" value="20"/>
+                                        </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                    </userDefinedRuntimeAttributes>
                                 </view>
                                 <view tag="2" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hkd-c8-VRg">
-                                    <rect key="frame" x="0.0" y="-1" width="200" height="280"/>
+                                    <rect key="frame" x="0.0" y="-5.5" width="206.5" height="289"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" tag="2" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="addcard" translatesAutoresizingMaskIntoConstraints="NO" id="rRy-Qe-DJz">
-                                            <rect key="frame" x="0.0" y="0.5" width="200" height="280"/>
+                                            <rect key="frame" x="0.0" y="0.5" width="206.5" height="289"/>
                                         </imageView>
                                     </subviews>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -161,12 +167,18 @@
                                         <constraint firstAttribute="width" secondItem="Hkd-c8-VRg" secondAttribute="height" multiplier="5:7" id="Qdz-qL-Vpy"/>
                                         <constraint firstItem="rRy-Qe-DJz" firstAttribute="top" secondItem="Hkd-c8-VRg" secondAttribute="top" id="R6F-g3-Wi0"/>
                                     </constraints>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                            <integer key="value" value="20"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
                                 </view>
                                 <view tag="3" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="31n-EL-h9q">
-                                    <rect key="frame" x="416" y="-1" width="200" height="280"/>
+                                    <rect key="frame" x="429" y="-5.5" width="206.5" height="289"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="addcard" translatesAutoresizingMaskIntoConstraints="NO" id="eTc-LX-hfY">
-                                            <rect key="frame" x="0.0" y="0.5" width="200" height="280"/>
+                                            <rect key="frame" x="0.0" y="0.5" width="206.5" height="289"/>
                                         </imageView>
                                     </subviews>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -177,6 +189,12 @@
                                         <constraint firstAttribute="trailing" secondItem="eTc-LX-hfY" secondAttribute="trailing" id="NAz-94-Zfb"/>
                                         <constraint firstAttribute="width" secondItem="31n-EL-h9q" secondAttribute="height" multiplier="5:7" id="c3E-Qs-pqV"/>
                                     </constraints>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                            <integer key="value" value="20"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
                                 </view>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
