--- a/APP/IOS/PointExchange/PointExchange/LoginView.xib
+++ b/APP/IOS/PointExchange/PointExchange/LoginView.xib
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -25,16 +26,16 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Poo-fi-HjZ">
-                    <rect key="frame" x="70" y="30" width="235" height="372"/>
+                    <rect key="frame" x="70" y="40.5" width="235" height="401.5"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="登录" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1K5-7c-5MQ">
-                            <rect key="frame" x="97.5" y="0.0" width="40" height="74.5"/>
+                            <rect key="frame" x="97.5" y="0.0" width="40" height="80.5"/>
                             <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="20"/>
                             <color key="textColor" red="0.4039215686" green="0.38431372549999998" blue="0.38431372549999998" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="请输入账号(电话号码)" textAlignment="center" minimumFontSize="17" background="输入框" translatesAutoresizingMaskIntoConstraints="NO" id="7gb-LH-OGi" userLabel="账户">
-                            <rect key="frame" x="7" y="82.5" width="221" height="40"/>
+                            <rect key="frame" x="7" y="88.5" width="221" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="Gpm-ot-tMF"/>
                             </constraints>
@@ -46,7 +47,7 @@
                             </connections>
                         </textField>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="请输入密码" textAlignment="center" minimumFontSize="17" background="输入框" translatesAutoresizingMaskIntoConstraints="NO" id="MhJ-Tb-797" userLabel="密码">
-                            <rect key="frame" x="7" y="130.5" width="221" height="40"/>
+                            <rect key="frame" x="7" y="136.5" width="221" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="LZ4-Ff-BDy"/>
                             </constraints>
@@ -58,23 +59,23 @@
                             </connections>
                         </textField>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z41-fb-VoN">
-                            <rect key="frame" x="7" y="178.5" width="221" height="122"/>
+                            <rect key="frame" x="7" y="184.5" width="221" height="131.5"/>
                             <state key="normal" image="login"/>
                             <connections>
                                 <action selector="login:" destination="-1" eventType="touchUpInside" id="3gv-vo-PZ4"/>
                             </connections>
                         </button>
                         <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="4vG-6O-7mK">
-                            <rect key="frame" x="15" y="308.5" width="205" height="63.5"/>
+                            <rect key="frame" x="15" y="324" width="205" height="77.5"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="———" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dd6-FV-dt6">
-                                    <rect key="frame" x="0.0" y="0.0" width="60" height="63.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="60" height="77.5"/>
                                     <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="20"/>
                                     <color key="textColor" red="0.59215686270000001" green="0.59215686270000001" blue="0.59215686270000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RCu-LT-ReR">
-                                    <rect key="frame" x="87.5" y="0.0" width="30" height="63.5"/>
+                                    <rect key="frame" x="87.5" y="0.0" width="30" height="77.5"/>
                                     <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
                                     <state key="normal" title="注册">
                                         <color key="titleColor" red="0.4039215686" green="0.38431372549999998" blue="0.38431372549999998" alpha="1" colorSpace="calibratedRGB"/>
@@ -84,7 +85,7 @@
                                     </connections>
                                 </button>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="———" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aJw-nL-n3E">
-                                    <rect key="frame" x="145" y="0.0" width="60" height="63.5"/>
+                                    <rect key="frame" x="145" y="0.0" width="60" height="77.5"/>
                                     <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="20"/>
                                     <color key="textColor" red="0.59215686270000001" green="0.59215686270000001" blue="0.59215686270000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
@@ -104,10 +105,10 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="Poo-fi-HjZ" firstAttribute="top" secondItem="ue7-un-13m" secondAttribute="top" constant="30" id="90i-gt-Diy"/>
-                <constraint firstAttribute="bottom" secondItem="Poo-fi-HjZ" secondAttribute="bottom" constant="120" id="DYO-C6-cTo"/>
-                <constraint firstAttribute="trailing" secondItem="Poo-fi-HjZ" secondAttribute="trailing" constant="70" id="HjI-YC-ora"/>
-                <constraint firstItem="Poo-fi-HjZ" firstAttribute="leading" secondItem="ue7-un-13m" secondAttribute="leading" constant="70" id="dQI-mg-b3J"/>
+                <constraint firstItem="Poo-fi-HjZ" firstAttribute="top" secondItem="cXt-nk-cW2" secondAttribute="centerY" multiplier="0.15" id="KLb-a7-V9P"/>
+                <constraint firstItem="cXt-nk-cW2" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Poo-fi-HjZ" secondAttribute="bottom" constant="8" id="Ojb-i0-dM6"/>
+                <constraint firstItem="Poo-fi-HjZ" firstAttribute="centerX" secondItem="cXt-nk-cW2" secondAttribute="centerX" id="g8p-eW-X8k"/>
+                <constraint firstItem="Poo-fi-HjZ" firstAttribute="height" secondItem="cXt-nk-cW2" secondAttribute="height" multiplier="0.8" id="wzv-Hd-fkv"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
