--- a/APP/Android/PointsLeague/app/src/main/res/layout/fragment_find.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/fragment_find.xml
@@ -15,23 +15,37 @@
     <LinearLayout
         android:id="@+id/layout_search_find"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="35dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="5dp"
         android:background="@drawable/bg_search_bar"
         android:orientation="horizontal">
-        <SearchView
-            android:id="@+id/searchView_find"
-            android:layout_width="match_parent"
-            android:layout_marginEnd="10dp"
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="10dp"
+            android:layout_gravity="center_vertical"
+            android:background="@drawable/ic_search_black_24dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:queryHint="搜索活动或商家"
-            android:background="@null"
-            android:focusable="false"
-            android:focusableInTouchMode="false">
-        </SearchView>
+            android:layout_marginStart="10dp"
+            android:layout_gravity="center_vertical"
+            android:text="搜索活动或商家"
+            android:textColor="#8E8E93"/>
+        <!--<SearchView-->
+            <!--android:id="@+id/searchView_find"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_marginEnd="10dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:queryHint="搜索活动或商家"-->
+            <!--android:background="@null"-->
+            <!--android:focusable="false"-->
+            <!--android:focusableInTouchMode="false">-->
+        <!--</SearchView>-->
     </LinearLayout>
 
     <ScrollView
